# conv-dynamics-dialogue-systems

./: .gitignore  main.py  model_v2_dual_attention.py  pyproject.toml  requirements.txt  stats.py  train.py
config/: baseline-windowed-10-random_1.json  baseline-windowed-10-random_2.json  baseline-windowed-10-random_3.json  baseline-windowed-10-random_4.json  dual_attention.json  dual_attention_switchboard_speaker.json
data/: dataloader.py  dataset.py
data/preprocessing/: preprocessing.py
data/preprocessing/datasets/: fisher.py
model/: components.py  config.py  sequential.py  util.py  windowed.py
model/window_iterator/: random.py  sequential.py
src/cdmodel/: cdmodel.py  consts.py  stats.py  stats_v2.py  test.py  train.py  train_manifest_v1.py
src/cdmodel/analysis/: analysis.py
src/cdmodel/data/: dataloader.py  dataloader_manifest_1.py  dataset.py  dataset_legacy.py  dataset_manifest_1.py  manifest.py
src/cdmodel/model/: components.py  config.py  sequential.py  sequential_manifest_v1.py  util.py  windowed.py
src/cdmodel/preprocessing/: __init__.py  consts.py  main.py  manifest.py  normalize.py
src/cdmodel/util/: gpu_distributed_multiprocessing.py  lightning_logs.py
tests/analysis/attention/: test_anchors_find_anchors.py  test_anchors_get_att_anchors.py
tests/model/: test_util_get_role_identity_idx.py  test_util_get_role_idx.py  test_util_get_speaker_role_idx.py  test_util_one_hot_drop_0.py
tests/preprocessing/: test_normalization.py
util/: args.py  cv.py  gpu_distributed_multiprocessing.py  lightning_logs.py
(+16 files in other folders)
